# laada

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  laada.toml.example
.github/workflows/: ci.yml  release.yml
src/: graph.rs  http.rs  laada.rs  ldap.rs  main.rs
static/: base.html.hbs  index.html  index.html.hbs  manage.html.hbs  register.html.hbs
static/templates/: base.html.hbs  error.html.hbs  index.html.hbs  manage.html.hbs  register.html.hbs
