[package]
name = "laada"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldap3_proto = "0.2.2"
tracing = "0.1"
tracing-subscriber = "0.2"
graph-rs-sdk = "0.1.4"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "net", "signal", "macros"] }
futures = "0.3"
tokio-util = { version = "0.6", features = ["codec"] }
log = "0.4.0"
env_logger = "0.8.4"
actix-web = "4"
rust-embed = "6.3.0"
handlebars = { version="4.2.2", features = ["rust-embed","dir_source"] }
libreauth = { version="0.14", features = ["oath-uri"] }
getrandom = "0.2"
chacha20poly1305 = "0.9.0"
argon2 = { version = "0.4.0", features = ["alloc"]}
serde_with = { version = "1.12", features = ["base64"] }
chrono = { version = "0.4", features = ["serde"]}
qrcode-generator = { version = "4.1.3", features = [] }
base64 = "0.13.0"
figment = { version = "0.10", features = ["toml", "env"] }
